feat(31-dashboard-bibliothécaire): implement methods for the admin and librarian dashboard